--- a/weather.Android/weather.Android.csproj
+++ b/weather.Android/weather.Android.csproj
@@ -93,6 +93,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\generic.json" />
+    <AndroidAsset Include="Assets\rain.json" />
+    <AndroidAsset Include="Assets\sunny.json" />
+    <AndroidAsset Include="Assets\cloud.json" />
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
