--- a/weather/weather.csproj
+++ b/weather/weather.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie" Version="4.0.10" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="models\" />
@@ -24,6 +25,7 @@
     <None Remove="Com.Airbnb.Xamarin.Forms.Lottie" />
     <None Remove="Newtonsoft.Json" />
     <None Remove="Microsoft.Extensions.Http" />
+    <None Remove="Xam.Plugin.Geolocator" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="models\" />
