busca por nome de cidade pronto. Bug no modal de load nunca fecha

--- a/weather/weather.csproj
+++ b/weather/weather.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Xam.Plugin.Geolocator" Version="4.5.0.6" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="models\" />
@@ -26,10 +27,13 @@
     <None Remove="Newtonsoft.Json" />
     <None Remove="Microsoft.Extensions.Http" />
     <None Remove="Xam.Plugin.Geolocator" />
+    <None Remove="Views\" />
+    <None Remove="Xamarin.CommunityToolkit" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="models\" />
     <Folder Include="services\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 </Project>
