--- a/weather.iOS/Info.plist
+++ b/weather.iOS/Info.plist
@@ -34,5 +34,11 @@
     <string>weather</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>NSLocationUsageDescription</key>
+    <string>Esse aplicativo precisa acessar a sua localização.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Esse aplicativo precisa acessar a sua localização.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Esse aplicativo precisa acessar a sua localização.</string>
 </dict>
 </plist>
